--- a/income_tobacco_and_alcohol_consumption.ipynb
+++ b/income_tobacco_and_alcohol_consumption.ipynb
@@ -2,83 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "9b2e857f-5295-4c2a-b0c7-c361709c45f9",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 41544 entries, 0 to 41543\n",
-      "Data columns (total 60 columns):\n",
-      " #   Column                                         Non-Null Count  Dtype \n",
-      "---  ------                                         --------------  ----- \n",
-      " 0   Total Household Income                         41544 non-null  int64 \n",
-      " 1   Region                                         41544 non-null  object\n",
-      " 2   Total Food Expenditure                         41544 non-null  int64 \n",
-      " 3   Main Source of Income                          41544 non-null  object\n",
-      " 4   Agricultural Household indicator               41544 non-null  int64 \n",
-      " 5   Bread and Cereals Expenditure                  41544 non-null  int64 \n",
-      " 6   Total Rice Expenditure                         41544 non-null  int64 \n",
-      " 7   Meat Expenditure                               41544 non-null  int64 \n",
-      " 8   Total Fish and  marine products Expenditure    41544 non-null  int64 \n",
-      " 9   Fruit Expenditure                              41544 non-null  int64 \n",
-      " 10  Vegetables Expenditure                         41544 non-null  int64 \n",
-      " 11  Restaurant and hotels Expenditure              41544 non-null  int64 \n",
-      " 12  Alcoholic Beverages Expenditure                41544 non-null  int64 \n",
-      " 13  Tobacco Expenditure                            41544 non-null  int64 \n",
-      " 14  Clothing, Footwear and Other Wear Expenditure  41544 non-null  int64 \n",
-      " 15  Housing and water Expenditure                  41544 non-null  int64 \n",
-      " 16  Imputed House Rental Value                     41544 non-null  int64 \n",
-      " 17  Medical Care Expenditure                       41544 non-null  int64 \n",
-      " 18  Transportation Expenditure                     41544 non-null  int64 \n",
-      " 19  Communication Expenditure                      41544 non-null  int64 \n",
-      " 20  Education Expenditure                          41544 non-null  int64 \n",
-      " 21  Miscellaneous Goods and Services Expenditure   41544 non-null  int64 \n",
-      " 22  Special Occasions Expenditure                  41544 non-null  int64 \n",
-      " 23  Crop Farming and Gardening expenses            41544 non-null  int64 \n",
-      " 24  Total Income from Entrepreneurial Acitivites   41544 non-null  int64 \n",
-      " 25  Household Head Sex                             41544 non-null  object\n",
-      " 26  Household Head Age                             41544 non-null  int64 \n",
-      " 27  Household Head Marital Status                  41544 non-null  object\n",
-      " 28  Household Head Highest Grade Completed         41544 non-null  object\n",
-      " 29  Household Head Job or Business Indicator       41544 non-null  object\n",
-      " 30  Household Head Occupation                      34008 non-null  object\n",
-      " 31  Household Head Class of Worker                 34008 non-null  object\n",
-      " 32  Type of Household                              41544 non-null  object\n",
-      " 33  Total Number of Family members                 41544 non-null  int64 \n",
-      " 34  Members with age less than 5 year old          41544 non-null  int64 \n",
-      " 35  Members with age 5 - 17 years old              41544 non-null  int64 \n",
-      " 36  Total number of family members employed        41544 non-null  int64 \n",
-      " 37  Type of Building/House                         41544 non-null  object\n",
-      " 38  Type of Roof                                   41544 non-null  object\n",
-      " 39  Type of Walls                                  41544 non-null  object\n",
-      " 40  House Floor Area                               41544 non-null  int64 \n",
-      " 41  House Age                                      41544 non-null  int64 \n",
-      " 42  Number of bedrooms                             41544 non-null  int64 \n",
-      " 43  Tenure Status                                  41544 non-null  object\n",
-      " 44  Toilet Facilities                              39964 non-null  object\n",
-      " 45  Electricity                                    41544 non-null  int64 \n",
-      " 46  Main Source of Water Supply                    41544 non-null  object\n",
-      " 47  Number of Television                           41544 non-null  int64 \n",
-      " 48  Number of CD/VCD/DVD                           41544 non-null  int64 \n",
-      " 49  Number of Component/Stereo set                 41544 non-null  int64 \n",
-      " 50  Number of Refrigerator/Freezer                 41544 non-null  int64 \n",
-      " 51  Number of Washing Machine                      41544 non-null  int64 \n",
-      " 52  Number of Airconditioner                       41544 non-null  int64 \n",
-      " 53  Number of Car, Jeep, Van                       41544 non-null  int64 \n",
-      " 54  Number of Landline/wireless telephones         41544 non-null  int64 \n",
-      " 55  Number of Cellular phone                       41544 non-null  int64 \n",
-      " 56  Number of Personal Computer                    41544 non-null  int64 \n",
-      " 57  Number of Stove with Oven/Gas Range            41544 non-null  int64 \n",
-      " 58  Number of Motorized Banca                      41544 non-null  int64 \n",
-      " 59  Number of Motorcycle/Tricycle                  41544 non-null  int64 \n",
-      "dtypes: int64(45), object(15)\n",
-      "memory usage: 19.0+ MB\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -316,7 +243,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,9 +258,9 @@
     "file_path = \"/home/jeumma/econometrics_analysis/Family Income and Expenditure.csv\"\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "#data = np.nan_to_num(df, nan=0, posinf=0, neginf=0)\n",
+    "data = np.nan_to_num(df, nan=0, posinf=0, neginf=0)\n",
     "\n",
-    "df.info()\n",
+    "#df.info()\n",
     "\n",
     "df.head()"
    ]
